--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,19 @@
   border: 2px dotted rebeccapurple;
 }
 
+/* Module Spawner */
+.module-spawner {
+  display: flex;
+  flex-flow: row wrap;
+  margin: auto;
+  max-width: 450px;
+}
+
+.module-spawner > * {
+  margin: auto;
+  padding: 0 0.25em;
+}
+
 /* Draftjs demo */
 .rdw-editor-main {
   height: 100%;
